# pensieve

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  install.sh  pyproject.toml  server.json
adapters/claude/: SKILL.md
brain/: PLAYBOOK.md
docs/: cli.md  core_concept.md  glossary.md  handoff.md  philosophy.md  spec_diff_format.md  spec_engine_contract.md  spec_resource_uris.md  spec_stream_layout.md  verbs.md
evals/: __init__.py  capture_fetch.py  removal.py
manual_runners/: quick_run.py
plans/: architect-review.md  roadmap.md  slice-10-multistream.md  slice-4-capture-fetch.md  slice-5a-remodel.md  slice-5b-entities-promotion.md  slice-5c-thin-view.md  slice-5d-edit-rm.md  slice-6-hardening.md  slice-7-assets.md  slice-8-search.md  slice-9-recency.md
src/pensieve/: __init__.py  __main__.py  config.py  errors.py  factory.py  mcp_server.py  slug.py
src/pensieve/cli/: __init__.py  main.py
src/pensieve/database/: __init__.py  migrate.py  models.py  session.py
src/pensieve/migrations/: env.py
src/pensieve/repository/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py
tests/integrations/: conftest.py  test_adapter_conformance.py  test_cli.py  test_eval.py  test_mcp.py  test_migrations.py  test_multistream_sqlite.py  test_recency_sqlite.py  test_search_sqlite.py  test_services.py
tests/unittests/: conftest.py  test_assets.py  test_content.py  test_entities.py  test_multistream.py  test_recency.py  test_search.py  test_streams.py
(+13 files in other folders)
