[project]
name = "pensieve"
version = "0.1.0"
description = "Manually-triggered, multi-stream agent memory — a personal knowledge graph."
authors = [{name = "Praveen Ilangovan", email = "praveen.ilangovan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[project.scripts]
pensieve = "pensieve.cli.main:main"
pensieve-mcp = "pensieve.mcp_server:main"

[tool.poetry]
packages = [{include = "pensieve", from = "src"}]

[tool.poetry.dependencies]
typer = "^0.21.1"
sqlmodel = "^0.0.27"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
mcp = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.4.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
